--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,4 @@
-= Documentation Template
-
-This repo contains the files that you need to start a new Neo4j documentation project.
+= Documentation details
 
 == Prereqs
 
