--- a/modules/ROOT/content-nav.adoc
+++ b/modules/ROOT/content-nav.adoc
@@ -1,14 +1,18 @@
 * xref::index.adoc[]
 * xref::overview.adoc[Project overview]
 * xref::quickstart-connect.adoc[Quick Start]
-* xref::kafka-connect.adoc[Kafka Connect Neo4j Connector]
+* xref::kafka-connect.adoc[{product-name}]
+** xref::kafka-connect/installation.adoc[Installation]
+** xref::kafka-connect/source.adoc[Source Configuration]
+** xref::kafka-connect/sink.adoc[Sink Configuration]
+** xref::kafka-connect/monitor-confluent.adoc[Monitor via Confluent Platform UI]
+** xref::kafka-connect/configuration.adoc[Configuration Summary]
 * xref::neo4j-cluster-connect.adoc[]
 * xref::architecture.adoc[Architectural Guidance]
 ** xref::architecture/kafkatopics.adoc[Kafka Topics Overview]
 ** xref::architecture/sinkconsume.adoc[Sink: Consume Records]
-** xref::architecture/sourceproduce.adoc[Source: Produce Records]
 ** xref::architecture/retries.adoc[Retries & Error Handling]
 ** xref::architecture/throughput.adoc[Factors which Affect Throughput]
 ** xref::architecture/transformations.adoc[Streams Transformations]
 ** xref::architecture/optimize.adoc[Optimizing Kafka]
-* xref::faq.adoc[Neo4j Streams FAQ]
+* xref::confluent-cloud.adoc[Confluent Cloud Support]
