--- a/modules/ROOT/pages/architecture/throughput.adoc
+++ b/modules/ROOT/pages/architecture/throughput.adoc
@@ -4,7 +4,7 @@ This is primarily around sinking records from Kafka -> Neo4j, but many of the sa
 
 == Neo4j Settings
 
-In general, Neo4j-Streams is writing to Neo4j with a strategy of:
+In general, {product-name} is writing to Neo4j with a strategy of:
 
 image::unwind-consume.png[align="center"]
 
@@ -16,24 +16,21 @@ UNWIND events AS event
 And so a critical factor is how many items are in the "events" array, per-transaction.
 
 * Heap sizing affects how big transactions coming from Kafka can be without starving other queries that are running
-* Page cache sizing affects how much data is hot and has a major impact on the cypher queries that neo4j-streams runs.
-* `neo4j.batch.parallelize` affects whether batches can be run in parallel.  This is a potential massive benefit for throughput - but comes with a sharp edge that ordering cannot be guaranteed if you parallelize, and there is risk of locking errors. (`*`)
-* `neo4j.batch.size` affects how many records get run in a Neo4j batch. (`*`)
-* `neo4j.batch.timeout.msecs` affects how long batches are given to execute. (`*`)
+* Page cache sizing affects how much data is hot and has a major impact on the cypher queries that {product-name} runs.
+* `neo4j.batch.parallelize` affects whether batches can be run in parallel.  This is a potential massive benefit for throughput - but comes with a sharp edge that ordering cannot be guaranteed if you parallelize, and there is risk of locking errors.
+* `neo4j.batch.size` affects how many records get run in a Neo4j batch.
+* `neo4j.batch.timeout.msecs` affects how long batches are given to execute.
 
-**The settings with `*` only applies to the kafka connect worker**.
-
-
-== Bolt Protocol overhead & Latency
-
-* When using the Kafka connect worker (not the plugin) - the code makes a regular connection to Neo4j using the bolt protocol
-* This means that extra bolt protocol overhead, as well as latency/throughput between the connect worker and Neo4j can be a factor.
 
 == Kafka Consumer Settings
 
-A major factor is how much data you pull from Kafka at a time, and how that turns into a batch of records.  How this works is that Neo4j-Streams uses the official Java client for Kafka to talk to the message queue, and runs a poll() operation in Kafka.   Settings that start with kafka.* in the config apply to this client, and control how it polls,  how much memory it uses, how big the batches are, and so forth.  Misconfiguration of this can cause major performance problems, for example if you get 1 record per polling operation, then you will write to Neo4j in batches of 1, maximizing the overall time you spend in transactional overhead.
+A major factor is how much data you pull from Kafka at a time, and how that turns into a batch of records.
+How this works is that {product-name} uses the official Java client for Kafka to talk to the message queue, and runs a poll() operation in Kafka.
+Settings that start with kafka.* in the config apply to this client, and control how it polls, how much memory it uses, how big the batches are, and so forth.
+Misconfiguration of this can cause major performance problems, for example if you get 1 record per polling operation, then you will write to Neo4j in batches of 1, maximizing the overall time you spend in transactional overhead.
 
-https://www.oreilly.com/library/view/kafka-the-definitive/9781491936153/ch04.html[More information in this excellent documentation] on how Kafka consumers work.   In particular, check "The Poll Loop" section, which is what Neo4j-Streams is doing internally.
+https://www.oreilly.com/library/view/kafka-the-definitive/9781491936153/ch04.html[More information in this excellent documentation] on how Kafka consumers work.
+In particular, check "The Poll Loop" section, which is what {product-name} is doing internally.
 
 Some generalities for Neo4j:
 
@@ -53,11 +50,12 @@ A logical setting might be to set max poll records = your desired transactional 
 
 {url-confluent-install}/configuration/consumer-configs.html[Important Kafka Consumer Configuration Elements & Their Explanations]
 
-(Use these with neo4j-streams by prepending with "kafka." in the config)
+(Use these with {product-name} by prepending with "kafka." in the config)
 
 == Kafka Partitioning Strategy
 
-A big factor can be how the Kafka topic is set up.   See {url-confluent-blog}/how-choose-number-topics-partitions-kafka-cluster/[how to choose the number of topics/partitions in a Kafka Cluster].
+A big factor can be how the Kafka topic is set up.
+See {url-confluent-blog}/how-choose-number-topics-partitions-kafka-cluster/[how to choose the number of topics/partitions in a Kafka Cluster].
 
 image::kafka-partitions.png[align="center"]
 
