--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -1,5 +1,5 @@
 
-= Neo4j Kafka Integration User Guide
+= {product-name} User Guide
 :img: https://github.com/neo4j-contrib/neo4j-streams/raw/gh-pages/3.4/images
 :env-docs: true
 
@@ -12,7 +12,7 @@ include::partial$neo4j-streams-notice.adoc[]
 The guide covers the following areas:
 
 * xref:overview.adoc[Project overview]
-* Get Started Fast with xref:quickstart-connect.adoc[Kafka Connect Neo4j Connector]
-* xref:kafka-connect.adoc[How to configure Kafka Connect Neo4j Connector]
-* Use xref:neo4j-cluster-connect.adoc[Kafka Connect Neo4j Connector] with a Neo4j cluster
-* xref:faq.adoc[Neo4j Streams FAQ]
+* xref:quickstart-connect.adoc[Quick start with {product-name}]
+* xref:kafka-connect.adoc[How to install and configure {product-name}]
+* xref:neo4j-cluster-connect.adoc[Usage with a Neo4j cluster]
+* xref:architecture.adoc[Architectural Guidance]
