--- a/modules/ROOT/pages/kafka-connect/config-override-policy.adoc
+++ b/modules/ROOT/pages/kafka-connect/config-override-policy.adoc
@@ -1,6 +1,6 @@
 
 [#kafka_connect_config_policy]
-=== Kafka Connect Client Config Override Policy
+== Kafka Connect Client Config Override Policy
 
 In Apache Kafka 2.3.0 was introduced the ability for each source and sink connector to inherit their client configurations
 from the worker properties.
