--- a/modules/ROOT/partials/kafka-connect-pattern-strategy.adoc
+++ b/modules/ROOT/partials/kafka-connect-pattern-strategy.adoc
@@ -1,93 +1,4 @@
-=== Sink ingestion strategies
-
-==== Change Data Capture Event
-
-
-_This paragraph has as pre-requisite a Neo4j 4.x instance running with the Streams plugin 4.1.x.
-For Neo4j 5.x the database plugin is no longer available._
-
-This method allows to ingest CDC events coming from another Neo4j Instance. You can use two strategies:
-
-* The `SourceId` strategy which merges the nodes/relationships by the CDC event `id` field (it's related to the Neo4j physical ID)
-* The `Schema` strategy which merges the nodes/relationships by the constraints (UNIQUENESS, NODE_KEY) defined in your graph model
-
-===== The `SourceId` strategy
-
-You can configure the topic in the following way:
-
-[source,ini,subs="verbatim,attributes"]
-----
-{environment}.topic.cdc.sourceId=<list of topics separated by semicolon>
-{environment}.topic.cdc.sourceId.labelName=<the label attached to the node, default=SourceEvent>
-{environment}.topic.cdc.sourceId.idName=<the id name given to the CDC id field, default=sourceId>
-----
-
-[source,ini,subs="attributes"]
-----
-{environment}.topic.cdc.sourceId=my-topic;my-other.topic
-----
-
-Each streams event will be projected into the related graph entity, for instance the following event:
-
-[source,json]
-----
-include::ROOT:example$producer-data/node.created.json[]
-----
-
-will be persisted as the following node:
-
-[source,cypher]
-----
-Person:SourceEvent{first_name: "Anne Marie", last_name: "Kretchmar", email: "annek@noanswer.org", sourceId: "1004"}
-----
-
-as you can notice, ingested event has been projected with two peculiarities:
-
-* the `id` field has transformed into `sourceId`;
-* the node has an additional label `SourceEvent`;
-
-these two fields will be used in order to match the node/relationship for future updates/deletes
-
-===== The `Schema` strategy
-
-You can configure the topic in the following way:
-
-[source,ini,subs="verbatim,attributes"]
-----
-{environment}.topic.cdc.schema=<LIST_OF_TOPICS_SEPARATED_BY_SEMICOLON>
-----
-
-[source,ini,subs="attributes"]
-----
-{environment}.topic.cdc.schema=my-topic;my-other.topic
-----
-
-Each streams event will be projected into the related graph entity, for instance the following event:
-
-[source,json]
-----
-include::ROOT:example$producer-data/node.created.json[]
-----
-
-will be persisted as the following node:
-
-[source,cypher]
-----
-Person{first_name: "Anne Marie", last_name: "Kretchmar", email: "annek@noanswer.org"}
-----
-
-The `Schema` strategy leverages the `schema` field in order to insert/update the nodes so no extra fields will be created.
-
-In case of relationship
-
-[source,json]
-----
-include::ROOT:example$producer-data/relationship.created.json[]
-----
-
-the `Schema` strategy leverages the `ids` fields in order to insert/update the relationships so no extra fields will be created.
-
-==== The `Pattern` strategy
+=== The `Pattern` strategy
 
 The `Pattern` strategy allows you to extract nodes and relationships from a json by providing a extraction pattern
 
@@ -111,13 +22,13 @@ in order to leverage it your event should contain as key the record that you wan
 **Currently you can't concatenate multiple patterns (for example in case you use just one topic and produce more then one node/relationship type).
 So you have to use a different topic for each type of node/relationship and define a pattern for each of them**
 
-===== The `Node Pattern` configuration
+==== The `Node Pattern` configuration
 
 You can configure the node pattern extraction in the following way:
 
-[source,ini,subs="verbatim,attributes"]
+[source,json,subs="verbatim,attributes"]
 ----
-{environment}.topic.pattern.node.<TOPIC_NAME>=<NODE_EXTRACTION_PATTERN>
+"{environment}.topic.pattern.node.<TOPIC_NAME>": "<NODE_EXTRACTION_PATTERN>"
 ----
 
 So for instance, given the following `json` published via the `user` topic:
@@ -132,16 +43,16 @@ You can transform it into a node by providing the following configuration:
 
 by specifying a simpler pattern:
 
-[source,ini,subs="verbatim,attributes"]
+[source,json,subs="verbatim,attributes"]
 ----
-{environment}.topic.pattern.node.user=User{!userId}
+"{environment}.topic.pattern.node.user": "User{!userId}"
 ----
 
 or by specifying a Cypher like node pattern:
 
-[source,ini,subs="verbatim,attributes"]
+[source,json,subs="verbatim,attributes"]
 ----
-{environment}.topic.pattern.node.user=(:User{!userId})
+"{environment}.topic.pattern.node.user": "(:User{!userId})"
 ----
 
 Similar to the CDC pattern you can provide:
@@ -169,13 +80,13 @@ so the persisted node will be: *(User{userId: 1, name: 'Andrea', surname: 'Santu
 
 |===
 
-===== The `Relationship Pattern` configuration
+==== The `Relationship Pattern` configuration
 
 You can configure the relationship pattern extraction in the following way:
 
-[source,ini,subs="verbatim,attributes"]
+[source,json,subs="verbatim,attributes"]
 ----
-{environment}.topic.pattern.relationship.<TOPIC_NAME>=<RELATIONSHIP_EXTRACTION_PATTERN>
+"{environment}.topic.pattern.relationship.<TOPIC_NAME>": "<RELATIONSHIP_EXTRACTION_PATTERN>"
 ----
 
 So for instance, given the following `json` published via the `user` topic:
@@ -189,16 +100,16 @@ You can transform it into a path, like `(n)-[r]->(m)`, by providing the followin
 
 By specifying a simpler pattern:
 
-[source,ini,subs="verbatim,attributes"]
+[source,json,subs="verbatim,attributes"]
 ----
-{environment}.topic.pattern.relationship.user=User{!userId} BOUGHT{price, currency} Product{!productId}
+"{environment}.topic.pattern.relationship.user": "User{!userId} BOUGHT{price, currency} Product{!productId}"
 ----
 
 or by specifying a Cypher like node pattern:
 
-[source,ini,subs="verbatim,attributes"]
+[source,json,subs="verbatim,attributes"]
 ----
-{environment}.topic.pattern.relationship.user=(:User{!userId})-[:BOUGHT{price, currency}]->(:Product{!productId})
+"{environment}.topic.pattern.relationship.user": "(:User{!userId})-[:BOUGHT{price, currency}]->(:Product{!productId})"
 ----
 
 in this last case the we assume that `User` is the source node and `Product` the target node
@@ -229,7 +140,7 @@ Similar to the CDC pattern you can provide:
 
 |===
 
-===== Attach properties to node
+==== Attach properties to node
 
 By default no properties will be attached to the edge nodes but you can specify which property attach to each node. Given the following `json` published via the `user` topic:
 
