--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -1,10 +1,5 @@
-
 = {product-name} User Guide
 :env-docs: true
-
-ifdef::backend-html5[(C) {copyright}]
-
-License: link:{url-common-license-page}[Creative Commons 4.0]
 
 include::partial$neo4j-streams-notice.adoc[]
 
@@ -15,3 +10,6 @@ The guide covers the following areas:
 * xref:kafka-connect.adoc[How to install and configure {product-name}]
 * xref:neo4j-cluster-connect.adoc[Usage with a Neo4j cluster]
 * xref:architecture.adoc[Architectural Guidance]
+
+(C) {copyright}
+License: link:{common-license-page-uri}[Creative Commons 4.0]
