Apply suggestions from Stu

--- a/modules/ROOT/pages/quickstart-connect.adoc
+++ b/modules/ROOT/pages/quickstart-connect.adoc
@@ -12,13 +12,16 @@ endif::env-docs[]
 [[kafka_connect_neo4j_connector_quickstart]]
 == {product-name}
 
-In this quickstart, we will first create a source instance which will query changes on a specific label and publish the changes into the topic named `my-topic`.
-Next, we will create a sink instance which will listen for messages in `my-topic` topic, and apply a cypher statement on the messages received.
-You will have a complete flow of source and sink when you complete the following steps.
+In this quickstart guide, we will use Docker Compose to create an environment with Confluent and Neo4j running inside Docker and then create a source instance which will query changes when nodes of specific label are created in a Neo4j database and publish the changes into a Kafka topic named `my-topic`.
+Next, we will create a sink instance which will listen for messages in `my-topic`, and apply a Cypher statement to create a new set of nodes and relationships in Neo4j when the messages are received.
+The result is Neo4j database being used as a source of events for Kafka topics that act as a sink for the same Neo4j database so that you can see the connector acting as both a source and sink for Neo4j databases. 
+
+[NOTE]
+The following guide uses the Kafka Connect Neo4j Connector with Confluent, the Docker Compose file will need to be modified to work with Apache Kafka.
 
 === Run with Docker
 
-Copy the following docker compose file into a desired directory.
+Copy the following Docker Compose file into a desired directory.
 
 .docker-compose.yml
 [source,yaml]
@@ -26,14 +29,14 @@ Copy the following docker compose file into a desired directory.
 include::ROOT:example$docker-data/docker-compose.yml[]
 ----
 
-Just go inside that directory (where the docker compose file resides) from the terminal and run the following command:
+Just go inside that directory (where the Docker Compose file resides) from the terminal and run the following command:
 
 [source,bash]
 ----
 docker compose up -d
 ----
 
-When the process is terminated you should have all the modules up and running.
+When the process completes you should have all the modules up and running.
 You can check the status of all services using the following command:
 
 [source,bash]
@@ -42,6 +45,7 @@ docker compose ps
 ----
 
 which should return a table like following, stating that every service is up and running.
+If you access your Confluent Control Center instance under http://localhost:9021/clusters, then it should report that the cluster is healthy, with one Broker and connect-default should appear under the Connect instance.
 
 [source,text]
 ----
@@ -54,12 +58,12 @@ schema-registry     "/etc/confluent/dock…"   schema-registry     running      
 zookeeper           "/etc/confluent/dock…"   zookeeper           running             2888/tcp, 0.0.0.0:2181->2181/tcp, 3888/tcp
 ----
 
-Now you can access your Neo4j instance under: \http://localhost:7474, log in with `neo4j` as username and
-`password` as password (see the docker compose file to change it).
+Now you can access your Neo4j instance under: \http://localhost:7474, log in with `neo4j` as username and `password` as password (Refer to the Docker Compose file to change it).
+Confirm that you can access the Confluent Control Center instance at http://localhost:9021/clusters and that the Cluster reports as healthy (this may take 90-120s). You should have one Broker, several Topics and one Connect in the Control Center
 
 === Configure SOURCE instance
 
-Save the following JSON file into a local directory named as `source.avro.neo4j.json`.
+First up, we need to set up Neo4j as a source database that will provide messages for topics, do do this save the following JSON file into a local directory named as `source.avro.neo4j.json`.
 
 .source.avro.neo4j.json
 [source,json]
@@ -78,8 +82,9 @@ curl -X POST http://localhost:8083/connectors \
 ----
 
 This will create a Kafka Connect Source instance that will send `AVRO` message over the topic named `my-topic`.
+In Control Center, confirm that the Neo4jSourceConnectorAVRO source connector has been created in the Connect tab, under connect-default.
 
-The property `topic` defines where each message will be pushed, the message structure is related is given by `RETURN` cause of the Cypher statement defined into the `neo4j.source.query` property.
+The property `topic` defines where each message will be pushed, the message structure is defined by the `RETURN` cause of the Cypher statement in the `neo4j.source.query` property.
 So given the above configuration, the structure of the message will be the following (serialized as an AVRO message):
 
 [source,json]
@@ -96,11 +101,11 @@ CREATE (:TestSource {name: 'mary', surname: 'doe', timestamp: datetime().epochMi
 CREATE (:TestSource {name: 'jack', surname: 'small', timestamp: datetime().epochMillis});
 ----
 
-which in turn will result in there new messages to be published into `my-topic` topic.
+which will result in there new messages being published into the `my-topic` topic.
 
 === Configure SINK instance
 
-Now is the time to create a SINK instance, which will consume messages from `my-topic` topic and execute CYPHER statement for each of the consumed message.
+To get the messages created inside `my-topic` sinked back to the Neo4j database as nodes and relationships, we need to create a SINK instance, which will consume messages from `my-topic` topic and execute a defined Cypher statement for each of the consumed message.
 
 First, save the following JSON file into a local directory named as `sink.avro.neo4j.json`.
 
@@ -115,27 +120,40 @@ We will now create the SINK instance by invoking the following REST call:
 [source,shell]
 ----
 curl -X POST http://localhost:8083/connectors \
-  -H 'Content-Type:application/json' \
-  -H 'Accept:application/json' \
+  -H "Content-Type:application/json" \
+  -H "Accept:application/json" \
   -d @sink.avro.neo4j.json
 ----
 
-In this case, we are configuring the SINK instance to consume data in AVRO format.
-The property `neo4j.topic.cypher.my-topic` defines the CYPHER query that will be executed per each message consumed by the SINK instance on the Kafka Connect side.
+This configures the SINK instance to consume data in AVRO format.
+The property `neo4j.topic.cypher.my-topic` defines the Cypher query that will be executed per each message consumed by the SINK instance on the Kafka Connect side.
+In Control Center, you can confirm that `my-topic` appears in Topics, and the Sink instance Neo4jSinkConnector appears under Connect, connect-default.
 
 === Testing It Out
 
-Now you can access your Confluent Control Center instance under: \http://localhost:9021/clusters, and check the created `my-topic` as specified in the connector configuration, as well as the connect cluster to see SINK and SOURCE instances running.
+Now you can access your Confluent Control Center instance under: \http://localhost:9021/clusters, and check the created `my-topic` as specified in the connector configuration, as well as the Source and Sink connector instances are running under Connect, connect-default.
 
-Having both SOURCE and SINK connectors running, we are expecting that the previously created `:TestSource` nodes to trigger there messages in the `my-topic` topic by the SOURCE instance.
+With both SOURCE and SINK connectors running, the previously created `:TestSource` nodes will result in messages being published into the `my-topic` topic by the Source instance.
 These messages will then be consumed by the SINK instance, and corresponding `:Person` and `:Family` nodes to be created inside Neo4j.
 
-Check that this is the case, by executing the following query:
+Check that this is the case, by executing the following query in the Neo4j Browser at http://localhost:7474/browser/:
 
 [source,cypher]
 ----
 MATCH (n:(Person | Family)) RETURN n
 ----
+
+You can create more Person and Family nodes by executing more statements like:
+
+[source,cypher]
+----
+CREATE (:TestSource {name: 'Ann', surname: 'Bolin', timestamp: datetime().epochMillis});
+----
+
+=== Summary
+
+In this Quick Start, we have shown how to configure a Neo4j database to act as both the source of messages for Confluent topics and the sink for those same messages from via topics to create new nodes and relationships in the database.
+Typically, our connector is used as either a sink when pulling data from other data sources via Apache Kafka or Confluent or as source for Apache Kafka or Confluent to push data into other databases.
 
 === Troubleshooting
 
